--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,18 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.onceapp">
 
+    <uses-sdk
+        android:minSdkVersion="10"
+        android:targetSdkVersion="23" />
+
     <uses-permission android:name="android.permission.INTERNET" />
+
+    <uses-permission android:name="android.permission.BLUETOOTH" />
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.GET_TASKS" />                       <!-- <- Add this line -->
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>           <!-- <- Add this line -->
+    <uses-permission android:name="android.permission.VIBRATE"/>                          <!-- <- Add this line -->
 
     <application
       android:allowBackup="true"
@@ -18,6 +29,17 @@
         </intent-filter>
       </activity>
       <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" />
+
+        <receiver android:name="com.awesomeproject.NotificationEventReceiver" />   <!-- <- Add this line -->
+        <receiver android:name="com.awesomeproject.NotificationPublisher" />       <!-- <- Add this line -->
+        <receiver android:name="com.awesomeproject.SystemBootEventReceiver">       <!-- <- Add this line -->
+            <intent-filter>                                                                   <!-- <- Add this line -->
+                <action android:name="android.intent.action.BOOT_COMPLETED"></action>           <!-- <- Add this line -->
+            </intent-filter>                                                                  <!-- <- Add this line -->
+        </receiver>
+
+        <service android:name="com.sensoro.beacon.kit.BeaconService"/>
+        <service android:name="com.sensoro.beacon.kit.IntentProcessorService"/>
     </application>
 
 </manifest>
