--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
     "react-native": "^0.23.1",
     "react-native-art-svg": "^1.1.1",
     "react-native-system-notification": "^0.1.9",
+    "react-redux": "^4.4.5",
+    "redux": "^3.4.0",
     "socket.io-client": "^1.4.5"
+  },
+  "devDependencies": {
+    "source-map": "^0.5.3"
   }
 }
