--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-native-system-notification": "^0.1.9",
     "react-redux": "^4.4.5",
     "redux": "^3.4.0",
+    "redux-thunk": "^2.0.1",
     "socket.io-client": "^1.4.5"
   },
   "devDependencies": {
